Commiting new exercises

--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -6,3 +6,8 @@
 /Aufgabe_2_8/
 /Wiederholung_1_2/
 /Aufgabe_3_12/
+/Wiederholung_3_2/
+/Wiederholung_3_3/
+/Wiederholung_3_5/
+/Wiederholung_3_4/
+/Wiederholung_3_5_a/
