--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -11,3 +11,19 @@
 /Wiederholung_3_5/
 /Wiederholung_3_4/
 /Wiederholung_3_5_a/
+/JAV02/
+/aufgabe_3_12_/
+/test/
+/jav02_Aufgabe_1_09/
+/jav02_Aufgabe_3_12/
+/jav02_Aufgabe_2_8/
+/jav02_Aufgabe_2_08/
+/jav02_Aufgabe_2_05/
+/jav02_Aufgabe_2_01/
+/jav02_Aufgabe_1_11/
+/jav02_Aufgabe_1_10/
+/jav02_Wiederholung_1_02/
+/jav02_Wiederholung_3_02/
+/jav02_Wiederholung_3_04/
+/jav02_Wiederholung_3_05_a/
+/jav01_Aufgabe_3_14/
