Adding new exercises

--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -30,3 +30,7 @@
 /jav02_Aufgabe_4_02/
 /jav02_Aufgabe_4_02_a/
 /jav02_Wiederholung_4_03/
+/jav02_Wiederholung_4_05/
+/jav02_Aufgabe_4_05/
+/jav02_Aufgabe_4_03/
+/jav02_Aufgabe_4_06/
