--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,7 +1,8 @@
-/jav01_Aufgabe_3_14/
-/jav02_Aufgabe_1_09/
-/jav02_Aufgabe_1_10/
-/jav02_Aufgabe_1_11/
+/jav02_Aufgabe_4_07/
+/jav02_Aufgabe_4_09/
+/jav02_Aufgabe_5_14/
+/jav02_Wiederholung_4_01/
+/jav02_Wiederholung_4_03/
 /jav02_Aufgabe_2_01/
 /jav02_Aufgabe_2_05/
 /jav02_Aufgabe_2_08/
@@ -10,12 +11,8 @@
 /jav02_Aufgabe_4_03/
 /jav02_Aufgabe_4_05/
 /jav02_Aufgabe_4_06/
-/jav02_Aufgabe_4_07/
-/jav02_Aufgabe_4_09/
 /jav02_Wiederholung_1_02/
 /jav02_Wiederholung_3_02/
 /jav02_Wiederholung_3_04/
 /jav02_Wiederholung_3_05_a/
-/jav02_Wiederholung_4_01/
-/jav02_Wiederholung_4_03/
-/jav02_Aufgabe_5_14/
+/tareaFinalJAV02/
